--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
       align-items: center;
       min-height: 100vh;
     }
-
+  footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: #333; /* Change as needed */
+      color: white; /* Change as needed */
+      text-align: center;
+    }
+    
     .container {
       width: 500px;
       background-color: rgba(232, 198, 76, 0.4); /* White with 80% opacity */
@@ -112,7 +121,13 @@
   </style>
 </head>
 <body>
-
+ <footer>
+       
+     <p>
+        &copy; 2024 Expanse Calculator . All rights reserved
+        </p>
+        <a href="/MyFirstWeb/privacy.html">Privacy Policy</a>
+</footer>
 <div class="container">
   <h1>My Daily Expenses</h1>
 
