--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: url('/top-view-money-calculator-arrangement.jpg') no-repeat center center fixed;
+      background: url('/https://img.freepik.com/free-photo/top-view-money-calculator-arrangement_23-2149103984.jpg?t=st=1718616516~exp=1718620116~hmac=d47a7c00586be79ea8273bf1a373d1951ec2fac92667a1ba6a5703699728e6f6&w=2000') no-repeat center center fixed;
       background-size: cover;
       margin: 0;
       padding: 0;
